--- a/style.css
+++ b/style.css
@@ -66,7 +66,7 @@ body{
     left: 0;
     top: 60%;
     color: white;
-    text-align: justify;
+    /* text-align: justify; */
     padding: 30px 5px;
     word-spacing: -3px;
     transition: .4s;
@@ -82,7 +82,7 @@ body{
     left: 0;
     top: 60%;
     color: white;
-    text-align: justify;
+    /* text-align: justify; */
     padding: 30px 5px;
     word-spacing: -3px;
     transition: .4s;
@@ -97,7 +97,7 @@ body{
     left: 0;
     top: 60%;
     color: white;
-    text-align: justify;
+    /* text-align: justify; */
     padding: 30px 5px;
     word-spacing: -3px;
     transition: .4s;
